--- a/altervar.html
+++ b/altervar.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <h1><a href="/">Enter Required Credit Score for Approval</a> </h1> 
+    <h1><a href="/">Enter Required Credit Score for Approval</a> <a href="/test"></a></h1> 
 
         <form method='post' action="/results">
             <label>
